--- a/src/components/HomeIndex/home.module.scss
+++ b/src/components/HomeIndex/home.module.scss
@@ -1,11 +1,18 @@
+.homeMain {
+    margin-top: 20px;
+}
+
 .cardsContainer {
     display: grid;
-    max-width: 1200px;
+    max-width: 1600px;
     padding: 0 20px;
     margin: 0 auto;
     grid-gap: 20px;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
 
+    @media (min-width: 480px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
 
     @media (min-width: 1024px) {
         grid-template-columns: repeat(3, 1fr);
@@ -25,6 +32,8 @@
 }
 
 .movieCard {
+    height: 400px;
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
