--- a/src/components/HomeIndex/home.module.scss
+++ b/src/components/HomeIndex/home.module.scss
@@ -6,7 +6,18 @@
 
 }
 
-.cardsContainer {
+.moviesSliderContainer {
+
+
+    .moviesSlider {
+
+        h1 {
+
+        }
+    }
+}
+
+.allMoviesContainer {
     display: grid;
     max-width: 1600px;
     width: 100%;
@@ -32,22 +43,23 @@
     @media (min-width: 1600px) {
         grid-template-columns: repeat(6, 1fr);
     }
-}
 
-.movieCard {
-    height: 400px;
+    .movieCard {
+        height: 400px;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    transition: all 0.3s ease-in-out;
-    cursor: pointer;
-    &:hover {
-        transform: scale(1.05);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #fff;
+        border-radius: 10px;
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        transition: all 0.3s ease-in-out;
+        cursor: pointer;
+        &:hover {
+            transform: scale(1.05);
+        }
     }
 }
+
